startup: add --add-opens for JAXB reflection, --configure-on-demand to skip :app